# Wigner_Time

./: .gitignore  README.md  WignerTimeADwin.bas  WignerTimeADwinADC.bas  pyproject.toml
.github/workflows/: tests.yml
doc/: AbsIm.ipynb  demo.ipynb  demo__full_experiment.py  demo__imaging.py  demo__tips_and_tricks.py  demonstration.py  diagnostics.py  diagnosticsDemo.py  doc.org  experiment.py  experimentDemo.py  experimentDemo__backup.py  experiment_new.ipynb  experiment_newDiagnostics.ipynb  notes--wigner-time.org  overview.org
resources/: adwin64_dll.parquet
resources/ADwin/: WignerTimeADwin.bas  WignerTimeADwinADC.bas
resources/test_data/: timeline__init-to-finish.parquet
tests/wigner_time/: test_adwin.py  test_connection.py  test_conversion.py  test_demo.py  test_device.py  test_display.py  test_input.py  test_timeline.py  test_util.py  test_variable.py
tests/wigner_time/internal/: test_dataframe.py  test_origin.py
tests/wigner_time/timeline/: test_create_timeline.py  test_timeline_anchor.py  test_timeline_create.py  test_timeline_manipulate.py  test_timeline_query.py  test_timeline_ramp.py
wigner_time/: __init__.py  adwin.py  anchor.py  config.py  connection.py  constructor.py  conversion.py  device.py  display.py  ideas.org  input.py  national_instruments.py  parameters.py  ramp.py  ramp_function.py  timeline.py  util.py  variable.py
wigner_time/adwin/: __init__.py  connection.py  core.py  display.py  validate.py
wigner_time/internal/: dataframe.py  origin.py
wigner_time/internal/doc/: dev-notes.org  experimentDemo.py  glossary.json  overview--essentials.org
wigner_time/internal/experimental/: demonstration.py  parameters.py
