[tool.poetry]
name = "wigner-time"
version = "0.9.0"
description = "
Extras:
- performance_and_export (Recommended): Installs `pyarrow` for memory management, sharing between systems and export to `parquet`.
- display: Installs `matplotlib` and `pyqt` for visualization.
- parallel_processing: Installs `polars` for parallel dataframe manipulation. (WARNING: This is currently not used, but will be in the future)
"
authors = ["LightMatters <clark.thomaswilliam@zoho.eu>"]
readme = "README.md"
packages = [{include = "wigner_time"}]

[tool.poetry.dependencies]
python = ">=3.10"
munch = "^3.0.0"
funcy = "^2.0"
pandas = "^2.0.1"

pyarrow = {version="^15.0.2", optional=true}
matplotlib = {version="^3.7.1", optional=true}
pyqt6 = {version="^6.5.0", optional=true}
polars = {version="^0.20.21", optional=true}

[tool.poetry.extras]
performance_and_export = ["pyarrow"]
display = ["matplotlib", "pyqt6"]
parallel_processing = ["polars"]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
