[tool.poetry]
name = "wigner_time"
version = "0.9.0"
description="Timeline creation and management for open-loop control in AMO experiments and beyond."
authors = ["LightMatters <clark.thomaswilliam@zoho.eu>"]
readme = "README.md"
packages = [{include = "wigner_time"}]

[tool.poetry.dependencies]
python = ">=3.10"
munch = "^3.0.0"
funcy = "^2.0"
pandas = "^2.2"
scipy = "^1.14"

pyarrow = {version="^19", optional=true}
matplotlib = {version="^3.7.1", optional=true}
pyqt6 = {version="^6.5.0", optional=true}
polars = {version="^0.20.21", optional=true}

[tool.poetry.extras]
performance_and_export = ["pyarrow"]
display = ["matplotlib", "pyqt6"]
parallel_processing = ["polars"]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
black = "^24.10.0"
pytest = "^7.3.1"
pyflakes = "^3.2.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
